# backend/lib/server/view.go
@@ -1,7 +1,6 @@
 package server
 
 import (
-	"fmt"
 	"net/http"
 	"strconv"
 
@@ -38,16 +37,16 @@ type AIGithubR struct {
 	Game   GameR      `json:"game"`
 }
 
-type ViewMatcheID int64
-type ViewMatcheShortR struct {
-	ID        ViewMatcheID       `json:"id"`
-	Game      GameR              `json:"game"`
-	State     PlayoutState       `json:"state"`
-	Exception string             `json:"exception"`
-	Results   []ViewResultShortR `json:"results"`
+type MatchID int64
+type MatchShortR struct {
+	ID        MatchID        `json:"id"`
+	Game      GameR          `json:"game"`
+	State     PlayoutState   `json:"state"`
+	Exception string         `json:"exception"`
+	Results   []ResultShortR `json:"results"`
 }
 
-type ViewResultShortR struct {
+type ResultShortR struct {
 	AI        AIR     `json:"ai"`
 	Result    *int    `json:"result"`
 	Exception *string `json:"exeption"`
@@ -74,9 +73,9 @@ func dInt(i **int) *int {
 	}
 	return *i
 }
-func (db *DB) GetMatches(id GameID) ([]*ViewMatcheShortR, error) {
+func (db *DB) GetMatches(id GameID) ([]*MatchShortR, error) {
 	type Result struct {
-		ID        ViewMatcheID `db:"id"`
+		ID        MatchID      `db:"id"`
 		State     PlayoutState `db:"state"`
 		Exception string       `db:"exception"`
 
@@ -119,16 +118,15 @@ func (db *DB) GetMatches(id GameID) ([]*ViewMatcheShortR, error) {
 		return nil, errors.Wrapf(err, "Faild select: Game %d", id)
 	}
 
-	res := []*ViewMatcheShortR{}
-	var c *ViewMatcheShortR
+	res := []*MatchShortR{}
+	var c *MatchShortR
 	for _, s := range sel {
-		fmt.Printf("%#+v\n", s)
 		if c != nil && c.ID != s.ID {
 			res = append(res, c)
 			c = nil
 		}
 		if c == nil {
-			c = &ViewMatcheShortR{
+			c = &MatchShortR{
 				ID:    s.ID,
 				State: s.State,
 				Game: GameR{
@@ -136,10 +134,10 @@ func (db *DB) GetMatches(id GameID) ([]*ViewMatcheShortR, error) {
 					Name: s.GameName,
 				},
 				Exception: s.Exception,
-				Results:   []ViewResultShortR{},
+				Results:   []ResultShortR{},
 			}
 		}
-		r := ViewResultShortR{
+		r := ResultShortR{
 			Result:    dInt(s.Result),
 			Exception: s.RException,
 			AI: AIR{
@@ -160,6 +158,129 @@ func (db *DB) GetMatches(id GameID) ([]*ViewMatcheShortR, error) {
 	}
 	if c != nil {
 		res = append(res, c)
+	}
+	return res, nil
+}
+
+type MatchR struct {
+	ID        MatchID      `json:"id"`
+	Game      GameR        `json:"game"`
+	State     PlayoutState `json:"state"`
+	Exception string       `json:"exception"`
+	Results   []ResultR    `json:"results"`
+	Record    string       `json:"record"`
+}
+
+type ResultR struct {
+	AI        AIR     `json:"ai"`
+	Result    *int    `json:"result"`
+	Exception *string `json:"exeption"`
+	Stderr    *string `json:"stderr"`
+}
+
+func HandlerViewMatch(db *DB) func(c echo.Context) error {
+	return func(c echo.Context) error {
+		idP := c.Param("id")
+		id, err := strconv.Atoi(idP)
+		if err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, "invalid id")
+		}
+		res, err := db.GetMatch((MatchID)(id))
+		if err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, "Failed db select")
+		}
+
+		return c.JSON(http.StatusOK, res)
+	}
+}
+
+func (db *DB) GetMatch(id MatchID) (*MatchR, error) {
+	type Result struct {
+		ID        MatchID      `db:"id"`
+		State     PlayoutState `db:"state"`
+		Exception string       `db:"exception"`
+		Record    string       `db:"record"`
+
+		GameID   GameID `db:"game_id"`
+		GameName string `db:"game_name"`
+
+		Result     **int      `db:"result"`
+		RException *string    `db:"rexception"`
+		RStderr    *string    `db:"rstderr"`
+		AITurn     int        `db:"ai_turn"`
+		AIID       AIID       `db:"ai_id"`
+		AICommit   string     `db:"ai_commit"`
+		AIGithubID AIGithubID `db:"aigithub_id"`
+		AIBranch   string     `db:"ai_branch"`
+		AIGithub   string     `db:"ai_github"`
+		UserID     UserID     `db:"user_id"`
+		UserName   string     `db:"user_name"`
+	}
+	var sel []Result
+	err := db.DB.Select(&sel, `
+		SELECT
+			p.id AS id, p.state AS state,
+			IFNULL(r.exception, "") AS exception,
+			IFNULL(r.record, "") AS record,
+			p.game_id AS game_id, g.name AS game_name,
+			rai.result AS result, rai.exception AS rexception,
+			rai.stderr AS rstderr,
+			ai.id AS ai_id, ai.commit AS ai_commit,
+			ai.ai_github_id AS aigithub_id, ag.github AS ai_github, ag.branch AS ai_branch,
+			u.id AS user_id, u.name AS user_name
+		FROM playout AS p
+		INNER JOIN game AS g ON g.id = p.game_id 
+		INNER JOIN playout_ai AS pai ON pai.playout_id = p.id
+		INNER JOIN ai AS ai ON ai.id = pai.ai_id
+		INNER JOIN ai_github AS ag ON ag.id = ai.ai_github_id
+		INNER JOIN user AS u ON u.id = ag.user_id
+		LEFT JOIN playout_result AS r ON r.playout_id = p.id
+		LEFT JOIN playout_result_ai AS rai ON rai.playout_id = p.id AND rai.turn = pai.turn
+		WHERE p.id = ?
+		ORDER BY p.id DESC, pai.turn ASC
+	`, id)
+
+	if err != nil {
+		return nil, errors.Wrapf(err, "Faild select: Game %d", id)
+	}
+
+	var res *MatchR
+	for _, s := range sel {
+		if res == nil {
+			res = &MatchR{
+				ID:    s.ID,
+				State: s.State,
+				Game: GameR{
+					ID:   s.GameID,
+					Name: s.GameName,
+				},
+				Exception: s.Exception,
+				Record:    s.Record,
+				Results:   []ResultR{},
+			}
+		}
+		r := ResultR{
+			Result:    dInt(s.Result),
+			Exception: s.RException,
+			Stderr:    s.RStderr,
+			AI: AIR{
+				ID:     s.AIID,
+				Commit: s.AICommit,
+				AIGithub: AIGithubR{
+					ID:     s.AIGithubID,
+					Github: s.AIGithub,
+					Branch: s.AIBranch,
+					User: UserR{
+						ID:   s.UserID,
+						Name: s.UserName,
+					},
+				},
+			},
+		}
+		res.Results = append(res.Results, r)
+	}
+	if res == nil {
+		return res, errors.Wrapf(err, "Missing Match %d", id)
 	}
 	return res, nil
 }
